2008-02-26  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gnome-office module doesn't exist any more.

2008-02-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Orca branched for gnome-2-22.

2008-02-23  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Omitted in previous commit to test also the 'document' key
	for docs.

2008-02-23  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Check in get_aggregate_stats that all domains retrieved
	from database are valid domains.
	Fixes (hopefully!) #416009.

2008-02-23  Claude Paroz  <claude@2xlibre.net>

	* scripts/allstats.py: Script to dump the Statistics table on a page.

2008-02-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: gnopernicus HEAD should not be frozen.

2008-02-21  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Added netspeed module to unofficial section

2008-02-20  Claude Paroz  <claude@2xlibre.net>

	* data/main.js: Check if doc returned any result (if no docs on page).
	* releases.py: Supportedness floor-rounded.
	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: Also set <tr> id for
	module group headers.

2008-02-20  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in: gdm trunk is NOT stringfrozen anymore

2008-02-19  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: GDM will use 2.20 branch for GNOME 2.22.

2008-02-18  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Updated French guys.
	* data/main.css:
	* data/main.js:
	* templates/header.tmpl:
	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-doc-stats.tmpl:
	* templates/language-release-ui-stats-modules.tmpl:
	* templates/language-release-ui-stats.tmpl:
	* templates/language-release.tmpl:
	Added patch from Gil Forcada to show/hide completed modules on language
	release pages.
	Fixes #106779.

2008-02-14  Claude Paroz  <claude@2xlibre.net>
