@@ -324,10 +324,10 @@
     <email>robert.sedak@sk.htnet.hr</email>
   </person>
   <!-- cs translation coordinator -->
-  <person id="jfriedl">
-    <!-- FIXME: isn't "mitr" the person? -->
-    <name>Jakub Friedl</name>
-    <email>jfriedl@suse.cz</email>
+  <person id="pmkovar">
+    <name>Petr Kovář</name>
+    <email>pknbe@volny.cz</email>
+    <bugzilla-account>pknbe@volny.cz</bugzilla-account>
   </person>
   <!-- da translation coordinator -->
   <person id="mwh">
