@@ -140,7 +140,7 @@
   </team>
   <team id="cs">
     <_language id="cs">Czech</_language>
-    <coordinator id="jfriedl"/>
+    <coordinator id="pmkovar"/>
     <mailing-list>gnome-cs-list@gnome.org</mailing-list>
     <mailing-list-subscribe>http://mail.gnome.org/mailman/listinfo/gnome-cs-list</mailing-list-subscribe>
     <webpage>http://live.gnome.org/Czech</webpage>
