@@ -1,3 +1,9 @@
+2008-02-27  Johannes Schmid <jhs@gnome.org>
+	
+	* people.xml.in:
+	* translation-teams.xml:
+	Changed "cs" team coordinator to Petr Kovář
+
 2008-02-26  Claude Paroz  <claude@2xlibre.net>
 
 	* releases.xml.in: gnome-office module doesn't exist any more.
